--- a/site_styles.css
+++ b/site_styles.css
@@ -2,14 +2,18 @@
 /* CSS Document */
 
 
+
+
+
+
 @font-face {
 font-family: "DIN_Next_CYR_Light";
 src: local("DIN_Next_CYR_Light") 
-url("font/DIN_Next_CYR_Light.otf") format('opentype')
+url("font/DIN_Next_CYR_Light.otf")
 }
 
 @font-face {
 font-family: "Futura_LT_Light";
 src: local("Futura_LT_Light") 
-url('font/Futura_LT_Light.ttf') format('truetype')
+url('font/Futura_LT_Light.ttf')
 }
