--- a/css/colors.css
+++ b/css/colors.css
@@ -1,5 +1,5 @@
 <style type="text/css" data-styleid="theme_colors">
-.color_white {color: #FFFFFF;}
+.color_0 {color: #FFFFFF;}
 .backcolor_0 {background-color: #FFFFFF;}
 .color_1 {color: #FFFFFF;}
 .backcolor_1 {background-color: #FFFFFF;}
