--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,14 +3,18 @@
 	src: url(../font/DIN_Next_CYR_Light.otf);
 }
 
+@font-face {
+	font-family: futura_en;
+	src: url(../font/futura.ttf);
+}
 
 @font-face {
-	font-family: futura;
-	src: url(../font/Futura_Orto_Lt.ttf);
+	font-family: open-sans-bold;
+	src: url(../font/open-sans-bold.ttf);
 }
 
 
-.font_0 {font: normal normal bold 60px/1.4em 'open sans',sans-serif ;color: #FFFFFF;}
+.font_0 {font: normal normal bold 60px/1.4em open-sans, sans-serif ;color: #FFFFFF;}
 .font_1 {font: normal normal normal 16px/1.4em din,sans-serif ;color:#605E5E;}
 .font_2 {font: normal normal normal 46px/1.4em futura-lt-w01-book,sans-serif ;color:#2F2E2E;}
 .font_3 {font: normal normal bold 60px/1.4em 'open sans',sans-serif ;color:#2F2E2E;}
@@ -23,10 +27,25 @@
 .font_10 {font: normal normal normal 12px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif ;color:#605E5E;}
 
 
- .font_H1{
-	 font: normal normal bold 60px/1.4em 'open sans',sans-serif ;color: #FFFFFF;
+
+ .font-main-menu {
+  font:normal normal normal 14px/1.4em futura_en,sans-serif;
+	color: #FFFFFF;
+	display: inline;
  }
 
- .FontMainMenu {
-  font:normal normal normal 14px/1.4em futura,sans-serif; color: #FFFFFF; display: inline;
+ h1 {
+	 font: normal normal  60px/1.4em open-sans-bold, sans-serif ;
+	 color: #FFFFFF;
+	 position: absolute;
+	 top: 12px;
+	 left: 182px;
+ }
+
+ h2 {
+	 font: normal normal  32px/1.4em open-sans-bold, sans-serif ;
+	 color: #FFFFFF;
+	 position: absolute;
+	 top: 71px;
+	 left: 518px;
  }
