--- a/css/styles.css
+++ b/css/styles.css
@@ -2,44 +2,79 @@
 @import url("./fonts.css");
 @import url("./colors.css");
 
-ul.ListMainMenu {
-    margin: 0; /* Обнуляем значение отступов */
-    padding: 0px; /* Значение полей */
-    align: center;
-   }
-ul.ListMainMenu li {
-    display: inline; /* Отображать как строчный элемент */
-    margin-right: 5px; /* Отступ слева */
-    padding: 20px; /* Поля вокруг текста */
+.style-body{
+  background-color: #41597D;
+  margin: 0;
+  padding: 0;
 
-   }
+}
+
+.style-header{
+  background-color: #41597D;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 155px;
 
 
+}
 
 
-   .MainMenuItems, .MainMenuItems li {
+/*Стиль для меню-------------------------------------*/
+
+   .main-menu-items, .main-menu-items li {
      margin: 0;
      padding: 0;
    }
-   .MainMenuItems {
+   .main-menu-items {
      max-width: 550px;
      margin: 0 auto;
      background: #41597D;
      position: relative;
      top: 15px;
    }
-   .MainMenuItems li {
+   .main-menu-items li {
      display: inline-block;
      text-align: center;
    }
-   .MainMenuItems a {
+   .main-menu-items a {
      display: block;
-     padding: 3px 15px;
-     color: #fff;
+     padding: 4px 15px;
+     color: #FFFFFF;
      text-decoration: none;
    }
-   .MainMenuItems a:hover {
+   .main-menu-items a:hover {
      background: #6285BC; */
      color: #FFFFFF;
      /* color: #6285BC;  */
+   }
+/*----------------------------------------*/
+
+  
+
+   .img-logo {
+     position: absolute;
+     top: 60px;
+     left: 113px;
+     width: 68px;
+     height: 68px;
+   }
+
+   .class-white-bar {
+     background-color: #FFFFFF;
+     position: absolute;
+     top: 148px;
+     left: 0px;
+     width: 100%;
+     height: 5px;
+
+   /* .class-white-bar {
+     background-color: #FFFFFF;
+     position: absolute;
+     top: 148px;
+     left: 0px;
+     width: 100%;
+     height: 5px; */
+
+
    }
