--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,12 @@
    }
 /*----------------------------------------*/
 
-  
+
 
    .img-logo {
-     position: absolute;
+     position: relative;
      top: 60px;
-     left: 113px;
+     left: 0px;
      width: 68px;
      height: 68px;
    }
