--- a/css/fonts.css
+++ b/css/fonts.css
@@ -38,16 +38,16 @@
 	 font: normal normal  60px/1.4em open-sans-bold, sans-serif ;
 	 color: #FFFFFF;
 	 position: relative;
-	 top: 12px;
-	 left: 52px;
+	 top: -65px;
+	 left: 70px;
 
  }
 
  h2 {
 	 font: normal normal  32px/1.4em open-sans-bold, sans-serif ;
 	 color: #FFFFFF;
-	 position: absolute;
-	 top: 71px;
-	 left: 518px;
+	 position: relative;
+	 top: -140px;
+	 left: 400px;
 	 white-space: nowrap;
 	 }
