--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,9 @@
 
     .style-banner{
       position: relative;
-      top:-26px;
-      margin:0 40% 0 6%
+      top: -26px;
+      left: 5%;
+      /* margin:0 40% 0 6% */
     }
 
 
