--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@
   width: 100%;
   height: 155px;
 
-
 }
 
 
@@ -25,6 +24,7 @@
    .main-menu-items, .main-menu-items li {
      margin: 0;
      padding: 0;
+
    }
    .main-menu-items {
      max-width: 550px;
@@ -51,10 +51,13 @@
 /* Баннер ----------------------------------------*/
 
     .style-banner{
+      background: #000000;
       position: relative;
-      top: -26px;
-      left: 7%;
-      /* margin:0 40% 0 6% */
+      top: 20px;
+
+      left: 12%;
+      /* align-content: center; */
+      /* margin:0 0% 0 0% */
     }
 
 
@@ -62,8 +65,8 @@
 
 
    .img-logo {
-     position: relative;
-     top: 55px;
+     position:absolute;
+     top: 0px;
      left: 0px;
      width: 68px;
      height: 68px;
