--- a/css/styles.css
+++ b/css/styles.css
@@ -1,92 +1,34 @@
 /* CSS Document */
 @import url("./fonts.css");
 @import url("./colors.css");
+@import url("./button.css");
+@import url("./header.css");
 
 .style-body{
   background-color: #41597D;
   margin: 0;
   padding: 0;
-
+  max-width: 1500px;
 }
 
-.style-header{
-  background-color: #41597D;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 155px;
-
+.img-man-and-pc{
+    position:relative;
+    top: 50px;
+    left: 0px;
+    width: 350px;
+    height: 200px;
+    border-radius: 10px;
+    -webkit-filter: opacity(80%);
+    box-shadow: 0.8em 0.8em 10px #0F293C;
 }
 
+.img-girl-and-pc{
+    position:relative;
+    top: 0px;
 
-/*Стиль для меню-------------------------------------*/
-
-   .main-menu-items, .main-menu-items li {
-     margin: 0;
-     padding: 0;
-
-   }
-   .main-menu-items {
-     max-width: 550px;
-     margin: 0 auto;
-     background: #41597D;
-     position: relative;
-     top: 15px;
-   }
-   .main-menu-items li {
-     display: inline-block;
-     text-align: center;
-   }
-   .main-menu-items a {
-     display: block;
-     padding: 4px 15px;
-     color: #FFFFFF;
-     text-decoration: none;
-   }
-   .main-menu-items a:hover {
-     background: #6285BC; */
-     color: #FFFFFF;
-     /* color: #6285BC;  */
-   }
-/* Баннер ----------------------------------------*/
-
-    .style-banner{
-      background: #000000;
-      position: relative;
-      top: 20px;
-
-      left: 12%;
-      /* align-content: center; */
-      /* margin:0 0% 0 0% */
-    }
-
-
-
-
-
-   .img-logo {
-     position:absolute;
-     top: 0px;
-     left: 0px;
-     width: 68px;
-     height: 68px;
-   }
-
-   .class-white-bar {
-     background-color: #FFFFFF;
-     position: absolute;
-     top: 148px;
-     left: 0px;
-     width: 100%;
-     height: 5px;
-
-   /* .class-white-bar {
-     background-color: #FFFFFF;
-     position: absolute;
-     top: 148px;
-     left: 0px;
-     width: 100%;
-     height: 5px; */
-
-
-   }
+    width: 350px;
+    height: 200px;
+    border-radius: 20px;
+    -webkit-filter: opacity(80%);
+    box-shadow: 0.8em 0.8em 10px #0F293C;
+}
