--- a/css/fonts.css
+++ b/css/fonts.css
@@ -53,8 +53,49 @@
 	 }
 
 	 .text-page1{
-		 font: normal normal normal 16px/1.4em futura-en, sans-serif ;
+		 font: normal normal normal 20px/1.4em futura-en, sans-serif ;
 		 color:#CFDFF2;
 		 text-align: justify;
 
 	 }
+
+	 .text-page2{
+		 font: normal normal normal 20px/1.4em futura-en, sans-serif ;
+		 color:#000000;
+		 text-align: justify;
+
+	 }
+
+	 .header1-page2{
+		 font: normal normal bold 40px/1.4em futura-en,sans-serif ;color:#2F2E2E;
+		 color:#000000;
+		 text-align: center;
+		 position: relative;
+		 top: 20px;
+
+	 }
+
+.header2-page2{
+	font: normal normal normal 30px/1.4em din, sans-serif ;color:#2F2E2E;
+
+	text-align: center;
+	position: relative;
+	top: -10px;
+
+}
+
+.header1-page3{
+	font: normal normal bold 45px/1.4em futura-en,sans-serif ;color:#2F2E2E;
+	color:#FFFFFF;
+	text-align: center;
+	position: relative;
+	top: 20px;
+
+}
+
+.text-page3{
+	font: normal normal normal 20px/1.4em futura-en, sans-serif ;
+	color:#FFFFFF;
+	text-align: justify;
+
+}
