--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@
     position:relative;
     top: 50px;
     left: 0px;
-    width: 350px;
-    height: 200px;
+    width: 400px;
+    height: 250px;
     border-radius: 10px;
     -webkit-filter: opacity(80%);
     box-shadow: 0.8em 0.8em 10px #0F293C;
@@ -26,9 +26,32 @@
     position:relative;
     top: 0px;
 
-    width: 350px;
-    height: 200px;
+    width: 400px;
+    height: 250px;
     border-radius: 20px;
     -webkit-filter: opacity(80%);
+    box-shadow: 0.8em 0.8em 10px #0F293C;
+}
+
+.img-about{
+    position:relative;
+    top: 0px;
+
+    width: 300px;
+    height: 400px;
+    border-radius: 20px;
+    -webkit-filter: opacity(80%);
+    box-shadow: 0.8em 0.8em 10px #0F293C;
+}
+
+
+.img-recom{
+    position:relative;
+    top: 0px;
+
+    width: 450px;
+    height: 300px;
+    border-radius: 20px;
+    -webkit-filter: opacity(100%);
     box-shadow: 0.8em 0.8em 10px #0F293C;
 }
