--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,9 @@
 /* CSS Document */
-@import url("./fonts.css");
-@import url("./colors.css");
+@import url("./style_font.css");
+@import url("./style_header.css");
+@import url("./style_img.css");
+@import url("./style_button.css");
 
-@import url("./header.css");
-@import url("./page1.css");
-@import url("./page2.css");
-@import url("./page3.css");
-@import url("./page4.css");
-@import url("./page5.css");
 
 .style-body{
   background-color: #41597D;
