--- a/css/style_font.css
+++ b/css/style_font.css
@@ -18,7 +18,7 @@
 
 /* Стили текста для страницы THE IDEA*/
 .idea-header{
-font: normal normal normal 40px/1.4em futura-en, sans-serif ;color:#2F2E2E;
+font: normal normal bold 40px/1.4em futura-en, sans-serif ;color:#2F2E2E;
 text-align: center;
 position: relative;
 top: -10px;
