--- a/css/style_button.css
+++ b/css/style_button.css
@@ -5,24 +5,21 @@ display: inline-block;
 margin: 0 10px 0 0;
 padding: 2px 30px;
 font-size: 21px;
-font-family: futura-en, serif;
+font-family: futura, serif;
 line-height: 1.4;
 appearance: none;
 box-shadow: none;
 border-radius: 5px;
 position: relative;
-
-
-top: 20px;
-
+top: 10px;
 -moz-transition: background-color 0.5s 0.1s ease;
 -o-transition: background-color 0.5s 0.1s ease;
 -webkit-transition: background-color 0.5s 0.1s ease;
 }
+
 button:focus {
 outline: none
 }
-
 
 section.flat-button button {
 color: #FFFFFF;
@@ -30,11 +27,13 @@ background-color: #0F293C;
 /* text-shadow: -1px 1px #417cb8; */
 border: solid 2px #0F293C;
 }
+
 section.flat-button button:hover,
 section.flat-buttont button.hover {
 background-color: #41597D;
 border: solid 2px #FFFFFF;
 }
+
 section.flat-button button:active,
 section.fla-buttont button.active {
 background-color: #27496d;
