--- a/css/style_header.css
+++ b/css/style_header.css
@@ -49,7 +49,9 @@
       position: relative;
       top: 0px;
       width:82%;
-      left: 13%;
+      /* left: 13%; */
+      margin-left: auto;
+    /* margin-right: auto */
     }
 
     .font-main-menu {
