--- a/css/style_header.css
+++ b/css/style_header.css
@@ -51,7 +51,7 @@
       width:82%;
       /* left: 13%; */
       margin-left: auto;
-    /* margin-right: auto */
+      margin-right: auto
     }
 
     .font-main-menu {
