--- a/css/style_ext_font_en.css
+++ b/css/style_ext_font_en.css
@@ -1,5 +1,5 @@
 /* Подключение внешних шрифтов */
 @font-face {
 	font-family: futura;
-	src: url(../font/futura-en.ttf);
+	src: url(../font/futura-ru.otf);
 }
