--- a/css/style_font.css
+++ b/css/style_font.css
@@ -7,7 +7,7 @@
 
 @font-face {
 	font-family: futura;
-	src: url(../font/futura-ru.otf);
+	src: url(../font/futura.otf);
 }
 
 /* Стили текста для страницы HOME */
