--- a/css/style_img.css
+++ b/css/style_img.css
@@ -34,9 +34,9 @@
 /* Стили рисунков для страницы ABOUT */
 .img-screenshot1{
     position:absolute;
-    top: 70px;
-    left: -40px;
-    width: 150px;
+    top: 140px;
+    left: 70px;
+    width: 200px;
     height: 150px;
     border-radius: 10px;
     -webkit-filter: opacity(100%);
@@ -45,10 +45,10 @@
 
 .img-screenshot2{
     position:absolute;
-    top: 550px;
-    left: 30px;
-    width: 150px;
-    height: 80px;
+    top: 250px;
+    left: -130px;
+    width: 180px;
+    height: 120px;
     border-radius: 10px;
     -webkit-filter: opacity(100%);
     box-shadow: 0.8em 0.8em 10px #0F293C;
@@ -56,10 +56,10 @@
 
 .img-screenshot3{
     position:absolute;
-    top: 270px;
-    left: 30px;
-    width: 150px;
-    height: 100px;
+    top: -150px;
+    left: -40px;
+    width: 250px;
+    height: 220px;
     border-radius: 10px;
     -webkit-filter: opacity(100%);
     box-shadow: 0.8em 0.8em 10px #0F293C;
@@ -67,10 +67,10 @@
 
 .img-screenshot4{
     position:absolute;
-    top: 400px;
-    left: -40px;
-    width: 200px;
-    height: 120px;
+    top: 350px;
+    left: 100px;
+    width: 300px;
+    height: 250px;
     border-radius: 10px;
     -webkit-filter: opacity(100%);
     box-shadow: 0.8em 0.8em 10px #0F293C;
@@ -78,10 +78,21 @@
 
 .img-screenshot5{
     position:absolute;
-    top: 660px;
-    left: -30px;
+    top: 560px;
+    left: -50px;
     width: 200px;
     height: 100px;
+    border-radius: 10px;
+    -webkit-filter: opacity(100%);
+    box-shadow: 0.8em 0.8em 10px #0F293C;
+}
+
+.img-screenshot6{
+    position:absolute;
+    top: 700px;
+    left: -30px;
+    width: 400px;
+    height: 250px;
     border-radius: 10px;
     -webkit-filter: opacity(100%);
     box-shadow: 0.8em 0.8em 10px #0F293C;
